Added new server.js file to remove jest open port error

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon server.js",
     "test": "jest",
-    "prod":"node app.js"
+    "prod":"node server.js"
   },
   "keywords": [],
   "author": "",
