--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,5 +34,5 @@ jobs:
       with:
         ref: main
     - name: Buld the docker image
-      run: docker build . --file Dockerfile --tag safe-browsing-screenshot:$(date + %s)
+      run: docker build . --file Dockerfile --tag safe-browsing-screenshot:$(date)
       
