--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,4 +35,10 @@ jobs:
         ref: main
     - name: Buld the docker image
       run: docker build --tag safebrowsingscreenshot .
-      
+    - name: docker login
+      uses: docker/login-action@v1
+      with: 
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: docker push
+      run: docker push ${{secrets.DOCKER_USERNAME}}/safebrowsing
