--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,6 +20,11 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - name: bash test
+      shell: bash
+      run: | 
+        echo ${{secrets.DOCKER_USERNAME}}
+          | 
     - uses: actions/checkout@v2
       with:
         ref: main
@@ -35,10 +40,10 @@ jobs:
         ref: main
     - name: Buld the docker image
       run: docker build --tag safebrowsingscreenshot .
-    - name: docker login
+    - name: Login to Docker Hub
       uses: docker/login-action@v1
-      with: 
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
     - name: docker push
       run: docker push ${{secrets.DOCKER_USERNAME}}/safebrowsing
