--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,9 +34,7 @@ jobs:
       with:
         ref: main
     - name: Buld the docker image
-      run: docker build --tag safebrowsingscreenshot .
-    - name: Adding Image tag
-      run: docker tag safebrowsingscreenshot:latest yuprobot/safebrowsing/safebrowsingscreenshot:latest
+      run: docker build --tag yuprobot/safebrowsing .
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
