--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "dev": "nodemon server.js",
     "test": "jest",
-    "prod":"node server.js"
+    "prod": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.8.0",
     "express": "^4.17.2",
     "nodemon": "^2.0.15",
     "puppeteer": "^13.1.2"
